Add RPC state snapshot analysis
